--- a/ui,ux/maino.css
+++ b/ui,ux/maino.css
@@ -7,11 +7,11 @@ body{
     background-image: linear-gradient(to right, #70cd63, #25ab79);
 }
 
-.maincontainer{
+ .maincontainer{
     display: flex;
     justify-content: space-around;
-margin: 60px 100px;
-}
+margin: 60px 100px  0px  100px;
+} 
 .mc{
     padding: 10px 15px 10px 15px;
     border-radius: 50px;
@@ -20,68 +20,52 @@ color: azure;
 background-color: brown;
 border-color: black;
 border: 3px solid  rgb(216, 249, 1);
-}
+cursor: pointer;}
 .mc:hover{
     border: 3px solid  rgb(232, 14, 14);
     color: black;
     background-color: darkorange;
 }
                                            /* hideen part start from here*/
-button{
-    border: 1px solid rgb(4, 3, 3);
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 0px 1px 0px 1px;
+
+                                   /*   strat  box  btn    from here      */
+ .hidden_button{
+    border: 2px solid rgb(4, 3, 3);
     position: relative;
-}
-.hidden_button{
-    position: relative;
-    top: -3px;
-    left: 497px;
-background-color: black;
-color: aliceblue;
+    top: -2px;
+    left: 390px;
+background-color: rgb(213, 16, 16);
+color: rgb(21, 244, 99);
 font-size: 15px;
+display: flex;
+cursor: pointer;
+
 }
-
-
-
-
-.hiddensec{
-    
-    border: 4px solid black;
+.hidden_button:hover{
+    color: black;
+   border: none;
+   background-color: aqua;
+   font-size: 17px;
+} 
+                                      /*  end    btn      */  
+ 
+                                      /*  complete box    start      */  
+                                   
+#cover{
+    border: 4px solid rgb(43, 133, 230);
     border-radius: 20px;
     text-align: center;
-     width: 50%;
-     padding: 7px;
+     width: 40%;
+     padding:8px;
 position: absolute;
-background-color: aqua;
+background-color: rgb(0, 0,0,);
 margin-left: 280px;
-margin-top: 180px;
-/* display: none; */
-}
+margin-top: 90px;
+opacity:0 ;
+box-shadow: 10px 10px 10px 10px;
 
-.hidden_button:hover{
-    border: 1px solid  rgb(232, 14, 14);
-    background-color: rgb(233, 233, 233);
-    color: rgb(0, 0, 0);
-
-}
-.modal_container{
-    position: fixed;
-    top: 0;
-    left: 0;
-height: 100%;
-width: 100%;
-opacity: 0;
-pointer-events: none;
-background: rgba (0,0,0,0.6); 
-display: none;
-
-
-}
-
+  }
+  
 .active{
-    opacity: 1;
-    pointer-events:auto;
-} 
+opacity: 1;  
+}
