--- a/ui,ux/maino.css
+++ b/ui,ux/maino.css
@@ -58,14 +58,14 @@ cursor: pointer;
      width: 40%;
      padding:8px;
 position: absolute;
-background-color: rgb(0, 0,0,);
+background: linear-gradient(to bottom, #45cdfa 5%, #ef7bb5 100%);
 margin-left: 280px;
 margin-top: 90px;
-opacity:0 ;
+opacity:1;
 box-shadow: 10px 10px 10px 10px;
 
   }
   
 .active{
-opacity: 1;  
+opacity: 0;  
 }
