--- a/ui,ux/maino.css
+++ b/ui,ux/maino.css
@@ -1,71 +1,89 @@
-*{
- padding: 0px;
- margin: 0px;
- box-sizing: border-box;   
+* {
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
 }
-body{
+
+body {
+
     background-image: linear-gradient(to right, #70cd63, #25ab79);
 }
 
- .maincontainer{
+.maincontainer {
     display: flex;
     justify-content: space-around;
-margin: 60px 100px  0px  100px;
-} 
-.mc{
+    margin: 60px 100px 0px 100px;
+}
+
+.mc {
     padding: 10px 15px 10px 15px;
     border-radius: 50px;
-font-size: 15px;
-color: azure;
-background-color: brown;
-border-color: black;
-border: 3px solid  rgb(216, 249, 1);
-cursor: pointer;}
-.mc:hover{
-    border: 3px solid  rgb(232, 14, 14);
+    font-size: 15px;
+    color: azure;
+    background-color: brown;
+    border-color: black;
+    border: 3px solid rgb(216, 249, 1);
+    cursor: pointer;
+}
+
+.mc:hover {
+    border: 3px solid rgb(232, 14, 14);
     color: black;
     background-color: darkorange;
 }
-                                           /* hideen part start from here*/
 
-                                   /*   strat  box  btn    from here      */
- .hidden_button{
+/* hideen part start from here*/
+
+/*   strat  box  btn    from here      */
+.hidden_button {
     border: 2px solid rgb(4, 3, 3);
     position: relative;
-    top: -2px;
-    left: 390px;
-background-color: rgb(213, 16, 16);
-color: rgb(21, 244, 99);
-font-size: 15px;
-display: flex;
-cursor: pointer;
+    top: -32px;
+    left: 502px;
+    background-color: rgb(213, 16, 16);
+    color: rgb(21, 244, 99);
+    font-size: 15px;
+    display: flex;
+    cursor: pointer;
+    padding: 3px;
 
 }
-.hidden_button:hover{
+
+.hidden_button:hover {
     color: black;
-   border: none;
-   background-color: aqua;
-   font-size: 17px;
-} 
-                                      /*  end    btn      */  
- 
-                                      /*  complete box    start      */  
-                                   
-#cover{
+    border: none;
+    background-color: aqua;
+    font-size: 17px;
+}
+
+/*  end    btn      */
+
+/*  complete box    start      */
+
+#cover {
     border: 4px solid rgb(43, 133, 230);
     border-radius: 20px;
     text-align: center;
-     width: 40%;
-     padding:8px;
-position: absolute;
-background: linear-gradient(to bottom, #45cdfa 5%, #ef7bb5 100%);
-margin-left: 280px;
-margin-top: 90px;
-opacity:1;
-box-shadow: 10px 10px 10px 10px;
+    width: 40%;
+    padding: 40px;
+    position: absolute;
+    background: linear-gradient(to bottom, #45cdfa 5%, #ef7bb5 100%);
+    margin-left: 380px;
+    margin-top: 90px;
+    opacity: 1;
+    box-shadow: 10px 10px 10px 10px;
+line-height: 30px;
+font-weight: 700;
+}
 
-  }
-  
-.active{
-opacity: 0;  
+.active {
+    opacity: 0;
+}
+
+.hide{
+    display: none;
+}
+
+.show{
+    display: block;
 }
